--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Rock Paper Scissor Game</h1>
     <div id="result"></div>
     <div id="game-container">
-        <button onclick="playGame('rock')">Rock</button>
-        <button onclick="playGame('paper')">Paper</button>
-        <button onclick="playGame('scissors')">Scissors</button>
+        <button onclick="playGame('rock')">🪨</button>
+        <button onclick="playGame('paper')">🧻</button>
+        <button onclick="playGame('scissors')">✂️</button>
     </div>
 
   
